# CompilerHWSber

./: README.md
.github/workflows/: workflow.yaml
SLR/: .gitignore  CMakeLists.txt  README.md
SLR/flags/: CMakeLists.txt
SLR/src/: main.cpp
SLR/src/helpers/: CMakeLists.txt
SLR/src/helpers/include/helpers/: common.hpp
SLR/src/lexer/: CMakeLists.txt
SLR/src/lexer/include/lexer/: lexer.hpp  lexer_impl.hpp
SLR/src/lexer/source/: flexer.l  lexer.cpp
SLR/src/parser/: CMakeLists.txt  grammar
SLR/src/parser/include/parser/: parser.hpp
SLR/src/parser/source/: parser.cpp
SLR/tests/: CMakeLists.txt  arithm.txt  parser_tests.cpp
